# iCash-Application

./: README.md  bundle.sh  docker-compose.yml  project_bundle.txt  pytest.ini  results.txt  results2.txt  textfile.txt
api-service/: Dockerfile  entrypoint.sh  requirements.txt
api-service/api/: __init__.py  extensions.py  wsgi.py
api-service/api/routes/: cashier_routes.py  dashboard_routes.py
api-service/api/services/: cashier_service.py  dashboard_service.py
api-service/database/: __init__.py  database_config.py  models.py  seed.py
api-service/tests/: conftest.py  test_cashier_service.py  test_dashboard_service.py
cashier-service/: Dockerfile  wsgi.py
cashier-service/app/: __init__.py  config.py  services.py  views.py
cashier-service/templates/: index.html
common/: pyproject.toml
common/icash_common/: __init__.py  frontend.py  logging_config.py
common/icash_common/static/: styles.css
common/icash_common/templates/: base.html
dashboard-service/: Dockerfile  requirements.txt  wsgi.py
dashboard-service/app/: __init__.py  config.py  services.py  views.py
dashboard-service/templates/: dashboard.html
